--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
 	padding: 0;
 
 	font-family: 'Noto Sans Display', sans-serif;
+	color: var(--black);
+
+	background-color: #f5f6f8;
 }
 
 a {
@@ -14,4 +17,14 @@ a {
 
 * {
 	box-sizing: border-box;
+}
+
+:root {
+	--black: #3b434e;
+	--white: white;
+	--primary: #7653fc;
+	--red: #fc836d;
+	--green: #1dc37e;
+	--green-light: #c8f8e4;
+	--font-family: 'Noto Sans Display', sans-serif;
 }
