--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -36,3 +36,19 @@
 	color: var(--white);
 	background-color: var(--primary);
 }
+
+.arrow {
+	display: inline-block;
+
+	margin-left: 10px;
+}
+
+.down {
+	transform: rotate(90deg);
+	transition: all 0.3s;
+}
+
+.primary svg,
+.ghost:hover svg {
+	fill: var(--white);
+}
